<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".view.InstrumentsDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >



                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/instrument_name"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                   />
                <View
                    android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="@android:color/darker_gray"/>

                <TextView
                    android:id="@+id/instrument_name"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"
                   />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/instrument_symbol"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"/>
        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/instrument_symbol"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"/>



                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/instrument_id"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"/>
        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/instrument_id"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"/>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/assetclass"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"/>
        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/assetclass"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text=""
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="10dp"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/priceincrement"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"/>
        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/priceincrement"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/quantityincremen"
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"/>
        <View
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@android:color/darker_gray"/>
        <TextView
            android:id="@+id/quantityincremen"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text=""
            android:textSize="20sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"/>

            </LinearLayout>

  </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>